tests/tests/ui-unstable/non-lit.stderr
error: proc macro panicked
  --> $DIR/non-lit.rs:14:5
   |
14 |     indoc!(fail);
   |     ^^^^^^^^^^^^^
   |
   = help: message: argument must be a single string literal

error: aborting due to previous error

